# Gipfel

./: .envrc  .gitignore  cabal.project  flake.nix  gipfel.cabal  package.yaml
gipfel-api/: CHANGELOG.md  gipfel-api.cabal
gipfel-api/assets/: schema.gql
gipfel-api/src/Gipfel/: Api.hs  GqlSchema.hs
gipfel-api/src/Servant/: Extra.hs
gipfel-server/: CHANGELOG.md  gipfel-server.cabal
gipfel-server/app/: Main.hs
gipfel-server/src/Data/Morpheus/: Extra.hs
gipfel-server/src/Gipfel/: App.hs  RootResolver.hs  Server.hs
src/: Main.hs
