cabal-version:      3.4
name:               gipfel-api
version:            0.1.0.0
synopsis:           The tasty URL shortener 🥐
homepage:           https://github.com/ners/Gipfel
license:            Apache-2.0
license-file:       LICENSE
author:             ners
maintainer:         ners@gmx.ch
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

library
    import:           common
    exposed-modules:
        Gipfel.GqlSchema,
        Servant.Extra
    build-depends:
        base,
        bytestring,
        file-embed,
        http-media,
        morpheus-graphql,
        servant,
        servant-openapi3,
        text
    hs-source-dirs:   src

test-suite gipfel-api-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        gipfel-api,
        hspec
