cabal-version:      3.4
name:               gipfel-server
version:            0.1.0.0
synopsis:           The tasty URL shortener 🥐
-- description:
homepage:           https://github.org/ners/Gipfel
license:            Apache-2.0
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: GHC2021

executable gipfel-server
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        gipfel-server

    hs-source-dirs:   app
    default-language: GHC2021

test-suite gipfel-server-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        gipfel-server
