cabal-version:      3.4
name:               gipfel-server
version:            0.1.0.0
synopsis:           The tasty URL shortener 🥐
homepage:           https://github.com/ners/Gipfel
license:            Apache-2.0
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns

library
    import:           common
    exposed-modules:
        Gipfel.App,
        Gipfel.RootResolver,
        Gipfel.Server
    build-depends:
        base,
        bytestring,
        generic-lens,
        gipfel-api,
        haxl,
        lens,
        monad-logger,
        monad-metrics,
        morpheus-graphql,
        morpheus-graphql-subscriptions,
        mtl,
        servant-server,
        text,
        transformers,
        unliftio,
        unliftio-core,
        wai-websockets,
        warp,
        websockets
    hs-source-dirs:   src

executable gipfel-server
    import:           common
    main-is:          Main.hs
    build-depends:
        base,
        gipfel-server

    hs-source-dirs:   app

test-suite gipfel-server-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        gipfel-server,
        hspec
